# DatabricksToGithub

./: .gitignore  README.md  cdk.context.json  package-lock.json  package.json
app/: app.ts
app/lib/: Context.ts
app/stacks/: api_stack.ts  lambda_stack.ts
src/lambda/: pyproject.toml
src/lambda/functions/: lambda.py
